--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <p>
       Практикум x
     </p>
+    <div>
+      <nav>
+        <span>Хз</span>
+        <span>123</span>
+      </nav>
+    </div>
   </div>
 </body>
 </html>
